tests/baselines/reference/YieldExpression6_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression6_es6.ts(1,1): error TS9001: 'generators' are not currently supported.


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression6_es6.ts (1 errors) ====
    function* foo() {
    ~~~~~~~~
!!! error TS9001: 'generators' are not currently supported.
      yield*foo
    }